--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,13 @@
             <version>2.7.3</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.17</version>
+        </dependency>
+
 
         <dependency>
             <groupId>junit</groupId>
