--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,8 @@
     <artifactId>HdfsDemo</artifactId>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>learn-jdbc</module>
+        <module>JdbcDemo</module>
+        <module>HiveDemo</module>
     </modules>
     <packaging>pom</packaging>
     <build>
