--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <modules>
         <module>JdbcDemo</module>
         <module>HiveDemo</module>
+        <module>hadoop-learn</module>
     </modules>
     <packaging>pom</packaging>
     <build>
