--- a/HiveDemo/pom.xml
+++ b/HiveDemo/pom.xml
@@ -14,6 +14,16 @@
             <artifactId>hive-jdbc</artifactId>
             <version>2.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.hive</groupId>
+            <artifactId>hive-exec</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+        </dependency>
     </dependencies>
     
 </project>
