--- a/HiveDemo/pom.xml
+++ b/HiveDemo/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>junit</artifactId>
             <version>4.11</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.hive</groupId>
+            <artifactId>hive-exec</artifactId>
+            <version>2.1.0</version>
+        </dependency>
     </dependencies>
     
 </project>
