--- a/HbaseDemo/pom.xml
+++ b/HbaseDemo/pom.xml
@@ -26,5 +26,14 @@
             <artifactId>hbase-client</artifactId>
             <version>1.2.3</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.hbase/hbase-server -->
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-server</artifactId>
+            <version>1.4.0</version>
+        </dependency>
+
+
+
     </dependencies>
 </project>
