--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>hadoop-learn</module>
         <module>AvroDemo</module>
         <module>HbaseDemo</module>
+        <module>KafkaDemo</module>
     </modules>
     <packaging>pom</packaging>
     <build>
@@ -81,6 +82,19 @@
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-mapreduce-client-core</artifactId>
             <version>2.7.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka -->
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka_2.12</artifactId>
+            <version>0.11.0.2</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
