--- a/SparkDemo1/pom.xml
+++ b/SparkDemo1/pom.xml
@@ -84,6 +84,17 @@
 <!--            <artifactId>scala-library</artifactId>-->
 <!--            <version>2.11.8</version>-->
 <!--        </dependency>-->
+
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-mllib_2.11</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.24</version>
+        </dependency>
     </dependencies>
 
 </project>
